# pixel-forge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/skills/generate-monster-sprite/: SKILL.md
apps/apple/PixelForgeApp/: Package.swift  project.yml
apps/sprite-editor/: index.html  package.json  server.mjs  tsconfig.json
apps/sprite-editor/server/: local-project.mjs
apps/sprite-editor/src/: App.tsx  api.ts  model.ts  motionPresets.ts  styles.css  types.ts
apps/sprite-editor/tests/: local-project.test.mjs
apps/web/: package.json  wrangler.jsonc
apps/web/public/: _headers
apps/web/tests/: site.test.mjs
crates/pixel-cli/: Cargo.toml
crates/pixel-cli/src/: main.rs  prompt.rs
crates/pixel-cli/tests/: sprite_cli.rs
crates/pixel-core/: Cargo.toml
crates/pixel-core/src/: color.rs  converter_settings.rs  decode.rs  error.rs  lib.rs  outline.rs  palette.rs  quantize.rs  recipe.rs  session.rs  settings.rs  transform.rs
crates/pixel-ffi/: Cargo.toml  uniffi.toml
crates/pixel-sprite/: Cargo.toml
crates/pixel-sprite/src/: builder.rs  error.rs  lib.rs  manifest.rs
crates/pixel-sprite/tests/: sprite_contract.rs
designs/reviews/: README.md
docs/: architecture.md  design-system.md  git-setup.md  pixel-art-converter.md  requirements.md  spec.md  sprite-workflow.md  ui-workflow.md  web-spec.md
fixtures/: README.md  source-gradient.ppm
scripts/: build-apple.sh  capture-apple-review.sh  ci-local.sh  run-ios-tests.sh  verify-apple-design-system.sh
tools/uniffi-bindgen/: Cargo.toml
(+63 files in other folders)
