[workspace]
members = [
  "crates/pixel-core",
  "crates/pixel-sprite",
  "crates/pixel-ffi",
  "crates/pixel-cli",
  "tools/uniffi-bindgen",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.6.4", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "pnm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tempfile = "3.27"
uniffi = "0.32.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
