[package]
name = "pixel-sprite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
image.workspace = true
pixel-core = { path = "../pixel-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
